welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: not found: value biscuits
while ( 2*biscuits!=caseOrange+1) {
          ^RunHalf:6: error: not found: value estsurOrange
	if (estsurOrange()) {caseOrange=caseOrange+1;} ;
            ^