welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {var biscuit: Int=0;
var caseOrange: Int=0;
while ( 2*biscuits!=caseOrange+1) {
	if (estsurOrange()) {caseOrange=caseOrange+1;} ;
	if (estSurBiscuit()) {biscuit=biscuit+1;} ;
	avance()}
}
